--- a/app/views/articles/_sidebar.html.erb
+++ b/app/views/articles/_sidebar.html.erb
@@ -37,7 +37,7 @@
         </div>
         <div class="side-footer">
           <a href="/about">About</a>
-          <a href="/sponsors">Sponsorsss</a>
+          <a href="/sponsors">Sponsors</a>
           <a href="https://shop.dev.to/"><%= ApplicationConfig["COMMUNITY_NAME"] %> Shop</a>
           <a href="/privacy">Privacy Policy</a>
           <a href="/terms">Terms of Use</a>
