Remove featured article

--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -15,7 +15,7 @@
       </form>
     </div>
     <div class="top-bar--links">
-      <a href="/new" id="write-link" class="cta top-bar--link write">WRITE A POST</a>
+      <a href="/new" id="write-link" class="cta top-bar--link write">Create Snippet</a>
       <a href="/connect" id="connect-link" class="top-bar--link" aria-label="Connect">
         <%= inline_svg_tag("connect.svg", aria: true, title: "Connect") %>
         <span class="connect-number nav-indicator" id="connect-number"></span>
